# simplemath

./: LICENSE  Makefile  README.md  pyproject.toml
src/simplemath/: __init__.py  calculator.py  factorial.py  fibonacci.py  is_prime.py  logic_utils.py  sum.py  systems_of_measurement.py
tests/: test_calculator.py  test_factorial.py  test_fibonacci.py  test_is_prime.py  test_logic_utils.py  test_sum.py  test_systems_of_measurement.py
